--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -71,7 +71,24 @@
 		    <version>2.5.1</version>
 		</dependency>
 		
-		<dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-entitymanager</artifactId> <version>5.2.3.Final</version> </dependency>
+		<dependency> 
+			<groupId>org.hibernate</groupId> 
+			<artifactId>hibernate-entitymanager</artifactId> 
+			<version>5.2.3.Final</version> 
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 				
 	</dependencies>
 
